004/yaml/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    run: httpserver
  name: httpserver
  namespace: default
spec:
  ports:
    - name: http
      port: 8080
  selector:
    app: httpserver
    enable: "true"
  sessionAffinity: None
  type: ClusterIP
